src/test/ui/error-codes/E0262.stderr
error[E0262]: invalid lifetime parameter name: `'static`
  --> $DIR/E0262.rs:11:8
   |
11 | fn foo<'static>(x: &'static str) { } //~ ERROR E0262
   |        ^^^^^^^ 'static is a reserved lifetime name

error: aborting due to previous error

